--- a/mongoshake-prometheus-exporter/values.yaml
+++ b/mongoshake-prometheus-exporter/values.yaml
@@ -73,11 +73,11 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /
+    path: /metrics
     port: http
 readinessProbe:
   httpGet:
-    path: /
+    path: /metrics
     port: http
 
 autoscaling:
